--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "sqlite": "^3.0.3",
     "uuid": "^3.3.2"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/synox/add-quik-video.git"
+  },
   "devDependencies": {
     "xo": "^0.24.0"
   },
